--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,6 +1,6 @@
 allow_embedding: false
-package_name: M3_App_1
-name: M3 App 1
+package_name: BTC2
+name: BTC2
 startup_form: Form1
 renamed: true
 runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
