--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -12,16 +12,16 @@ components:
     properties: {text: 'Nhập dãy số n (ví dụ: 3,2,1,...)'}
     type: Label
     layout_properties: {grid_position: 'NPGMQS,DSFOFE'}
+  - name: txtNHAP
+    properties: {}
+    type: TextBox
+    layout_properties: {grid_position: 'BQEZOY,IOLJRA'}
   - name: btnNHAP
     properties: {text: BẤM VÀO ĐÂY ĐỂ NHẬP, bold: true, background: 'theme:Tertiary',
       foreground: 'theme:Surface'}
     type: Button
     layout_properties: {grid_position: 'MNYKNW,YELJBW'}
     event_bindings: {click: btnNHAP_click}
-  - name: label_MANG
-    properties: {}
-    type: Label
-    layout_properties: {grid_position: 'HKGSEM,XKMFVL'}
   - name: btnSX
     properties: {text: SẮP XẾP, bold: true, background: 'theme:Tertiary', foreground: 'theme:On
         Primary'}
